k8s/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: env-kc2p9wa3qta4
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/initial-scale: "1"
        autoscaling.knative.dev/target: "10"
        autoscaling.knative.dev/metric: "concurrency"
        autoscaling.knative.dev/max-scale: "10"
        autoscaling.knative.dev/target-utilization-percentage: "80"
        autoscaling.knative.dev/scale-down-delay: "5m00s"
        autoscaling.knative.dev/scale-to-zero-pod-retention-period: "10m00s"
    spec:
      containerConcurrency: 40
      containers:
        - image: agnost-community/engine/core
          ports:
          - containerPort: 4000
          env:
                 - name: CACHE_HOSTNAME
                   value: redis-master
                 - name: CACHE_READ_REPLICA_HOSTNAME
                   value: redis-replicas
                 - name: CACHE_PWD
                   valueFrom:
                      secretKeyRef:
                         name: redis-password
                         key: password
                 - name: CACHE_READ_REPLICA_PWD
                   valueFrom:
                      secretKeyRef:
                         name: redis-password
                         key: password
                 - name: QUEUE_USERNAME
                   valueFrom:
                      secretKeyRef:
                         name: rabbitmq-default-user
                         key: username
                 - name: QUEUE_PASSWORD
                   valueFrom:
                      secretKeyRef:
                         name: rabbitmq-default-user
                         key: password
                 - name: QUEUE_HOST
                   valueFrom:
                      secretKeyRef:
                         name: rabbitmq-default-user
                         key: host
                 - name: CLUSTER_DB_URI
                   valueFrom:
                      secretKeyRef:
                         name: cluster-secrets
                         key: clusterDBURI
                 - name: CLUSTER_DB_USER
                   value: "mongo-user"
                 - name: CLUSTER_DB_PWD
                   valueFrom:
                      secretKeyRef:
                         name: mongodb-admin-password
                         key: password
                 - name: MASTER_TOKEN
                   valueFrom:
                      secretKeyRef:
                         name: cluster-secrets
                         key: masterToken
                 - name: POD_NAME
                   value: "api-server"
                 - name: PASSPHRASE
                   valueFrom:
                      secretKeyRef:
                         name: cluster-secrets
                         key: passPhrase
                 - name: AGNOST_ENVIRONMENT_ID
                   value: env-kc2p9wa3qta4
                 - name: AGNOST_ENGINE_ID
                   value: env-kc2p9wa3qta4
          resources:
            requests:
              cpu: "125m"
              memory: "128M"
            limits:
              cpu: "250m"
              memory: "512M"
