k8s/knative-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: env-kc2p9wa3qta4-ingress
   annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: 500m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-send-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-read-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: '6000'
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/upstream-vhost: env-kc2p9wa3qta4.default.svc.cluster.local
spec:
   ingressClassName: nginx
   rules:
      - http:
           paths:
              - path: /env-kc2p9wa3qta4/(.*)
                pathType: Prefix
                backend:
                   service:
                      name: env-kc2p9wa3qta4
                      port:
                         number: 80
